# safety-critical-rust-codebase-mining

./: .gitignore  AGENTS.md  README.md  validation_report.txt
.opencode/skill/outlier-review/: SKILL.md
coding-standards-fls-mapping/: README.md  misra_rust_applicability.json  verification_progress.json
coding-standards-fls-mapping/mappings/: cert_c_to_fls.json  cert_cpp_to_fls.json  misra_c_to_fls.json  misra_c_to_fls.json.backup  misra_cpp_to_fls.json
coding-standards-fls-mapping/schema/: batch_report.schema.json  coding_standard_rules.schema.json  decision_file.schema.json  fls_mapping.schema.json  misra_rust_applicability.schema.json  verification_progress.schema.json
coding-standards-fls-mapping/standards/: cert_c.json  cert_cpp.json  misra_c_2025.json  misra_cpp_2023.json
coding-standards-fls-mapping/verification/misra-c/: progress.json
docs/: add6-integration-plan.md  rust-context-search-infrastructure.md  schema-migration-v1-to-v2.md  schema-migration-v2-to-v3.md  verification-rerun-2026-01.md
embeddings/clippy/: embeddings.pkl  index.json  lints.json
embeddings/fls/: embeddings.pkl  sections.json
embeddings/misra_c/: embeddings.pkl
embeddings/nomicon/: chapter_01.json  chapter_02.json  chapter_03.json  chapter_04.json  chapter_05.json  chapter_06.json  chapter_07.json  chapter_08.json  chapter_09.json  chapter_10.json  chapter_11.json  chapter_12.json  chapter_13.json  embeddings.pkl  index.json
embeddings/reference/: chapter_01.json  chapter_02.json  chapter_03.json  chapter_04.json  chapter_05.json  chapter_06.json  chapter_07.json  chapter_08.json  chapter_09.json  chapter_10.json  chapter_11.json  chapter_12.json  chapter_13.json  chapter_14.json  chapter_15.json  chapter_16.json  chapter_17.json  chapter_18.json  chapter_19.json  chapter_20.json  chapter_21.json  chapter_22.json  embeddings.pkl  index.json
embeddings/similarity/: misra_c_to_fls.json
embeddings/ucg/: chapter_01.json  chapter_02.json  chapter_04.json  chapter_05.json  chapter_06.json  chapter_07.json  chapter_08.json  chapter_09.json  chapter_10.json  chapter_11.json  chapter_13.json  chapter_14.json  chapter_16.json  embeddings.pkl  index.json  paragraph_embeddings.pkl
iceoryx2-fls-mapping/: fls_chapter02_lexical_elements.json  fls_chapter03_items.json  fls_chapter04_types_and_traits.json  fls_chapter05_patterns.json  fls_chapter06_expressions.json  fls_chapter07_values.json  fls_chapter08_statements.json  fls_chapter09_functions.json  fls_chapter10_associated_items.json  fls_chapter11_implementations.json  fls_chapter12_generics.json  fls_chapter13_attributes.json  fls_chapter14_entities_resolution.json  fls_chapter15_ownership_destruction.json  fls_chapter16_exceptions_errors.json  fls_chapter17_concurrency.json  fls_chapter18_program_structure.json  fls_chapter19_unsafety.json  fls_chapter20_macros.json  fls_chapter21_ffi.json  fls_chapter22_inline_assembly.json  schema.json
iceoryx2-fls-mapping/backup/: fls_chapter02_lexical_elements.json  fls_chapter03_items.json  fls_chapter04_types_and_traits.json  fls_chapter05_patterns.json  fls_chapter06_expressions.json  fls_chapter07_values.json  fls_chapter08_statements.json  fls_chapter09_functions.json  fls_chapter10_associated_items.json  fls_chapter11_implementations.json  fls_chapter12_generics.json  fls_chapter13_attributes.json  fls_chapter14_entities_resolution.json  fls_chapter15_ownership_destruction.json  fls_chapter17_concurrency.json  fls_chapter18_program_structure.json  fls_chapter19_unsafety.json  fls_chapter20_macros.json  fls_chapter21_ffi.json  fls_chapter22_inline_assembly.json
plans/: fls-example-generation.md  schema-migration-v3-to-v4.md  verification-comparison-analysis.md
tools/: analyze_fls_coverage.py  clone_iceoryx2.py  extract_misra_rules.py  fls_section_mapping.json  map_misra_to_fls.py  normalize_fls_json.py  pyproject.toml  scaffold_verification_progress.py  scrape_cert_rules.py  validate_coding_standards.py  validate_fls_json.py
tools/data/: reference_id_mapping.json  valid_fls_ids.json  valid_reference_ids.json
tools/embeddings/: __init__.py  compute_similarity.py  extract_fls_content.py  extract_misra_text.py  generate_embeddings.py  orchestrate.py
tools/src/fls_tools/rust_docs/: __init__.py  clone.py  extract_clippy.py  extract_nomicon.py  extract_reference.py  extract_ucg.py  generate_embeddings.py  search.py  shared.py
tools/src/fls_tools/shared/: __init__.py  fls_ids.py  schema_version.py
tools/src/fls_tools/standards/analysis/: analysis_progress.py  prepare.py  record.py  record_investigation.py  review.py  shared.py
tools/src/fls_tools/standards/embeddings/: extract_fls.py  generate.py
tools/src/fls_tools/standards/extraction/: misra_add6.py
tools/src/fls_tools/standards/migration/: __init__.py  migrate_v4.py
tools/src/fls_tools/standards/validation/: applicability.py  decisions.py  generate_fls_ids.py  standards.py
tools/src/fls_tools/standards/verification/: apply.py  batch.py  merge.py  migrate_mappings.py  progress.py  record.py  reset.py  scaffold.py  search.py  search_deep.py
