[project]
name = "fls-tools"
version = "0.1.0"
description = "Tools for FLS mapping: iceoryx2 documentation and coding standards verification"
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.0",
    "pypdf>=4.0",           # For MISRA PDF extraction
    "httpx>=0.25",          # For CERT web scraping
    "beautifulsoup4>=4.12", # For HTML parsing
    "sentence-transformers>=3.0",  # For semantic embeddings
    "numpy>=1.24",          # For vector operations
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0",
]

[project.scripts]
# Pipeline 1: iceoryx2 -> FLS
clone-iceoryx2 = "fls_tools.iceoryx2.clone:main"
extract-fls-sections = "fls_tools.iceoryx2.extract:main"
normalize-fls = "fls_tools.iceoryx2.normalize:main"
restructure-fls = "fls_tools.iceoryx2.restructure:main"
update-fls-counts = "fls_tools.iceoryx2.update:main"
validate-fls = "fls_tools.iceoryx2.validate:main"

# Pipeline 2: Standards -> FLS (extraction)
extract-misra-rules = "fls_tools.standards.extraction.misra:main"
extract-misra-add6 = "fls_tools.standards.extraction.misra_add6:main"
scrape-cert-rules = "fls_tools.standards.extraction.cert:main"

# Pipeline 2: Standards -> FLS (embeddings)
extract-fls-content = "fls_tools.standards.embeddings.extract_fls:main"
extract-misra-text = "fls_tools.standards.embeddings.extract_misra:main"
generate-embeddings = "fls_tools.standards.embeddings.generate:main"
compute-similarity = "fls_tools.standards.embeddings.similarity:main"
orchestrate-embeddings = "fls_tools.standards.embeddings.orchestrate:main"

# Pipeline 2: Standards -> FLS (mapping)
map-misra-to-fls = "fls_tools.standards.mapping.generate:main"
sync-fls-mapping = "fls_tools.standards.mapping.sync:main"

# Pipeline 2: Standards -> FLS (verification)
verify-batch = "fls_tools.standards.verification.batch:main"
apply-verification = "fls_tools.standards.verification.apply:main"
check-progress = "fls_tools.standards.verification.progress:main"
record-decision = "fls_tools.standards.verification.record:main"
merge-decisions = "fls_tools.standards.verification.merge:main"
enrich-fls-matches = "fls_tools.standards.verification.enrich:main"
reset-batch = "fls_tools.standards.verification.reset:main"
reset-verification = "fls_tools.standards.verification.reset_verification:main"
search-fls = "fls_tools.standards.verification.search:main"
search-fls-deep = "fls_tools.standards.verification.search_deep:main"
recompute-similarity = "fls_tools.standards.verification.recompute:main"
scaffold-progress = "fls_tools.standards.verification.scaffold:main"
remediate-decisions = "fls_tools.standards.verification.remediate:main"
check-guideline = "fls_tools.standards.verification.batch_check:main"
migrate-mappings = "fls_tools.standards.verification.migrate_mappings:main"

# Pipeline 2: Standards -> FLS (migration)
migrate-to-v4 = "fls_tools.standards.migration.migrate_v4:main"

# Pipeline 2: Standards -> FLS (validation)
validate-standards = "fls_tools.standards.validation.standards:main"
validate-synthetic-ids = "fls_tools.standards.validation.synthetic:main"
validate-decisions = "fls_tools.standards.validation.decisions:main"
validate-applicability = "fls_tools.standards.validation.applicability:main"
generate-valid-fls-ids = "fls_tools.standards.validation.generate_fls_ids:main"

# Pipeline 3: Analysis (comparison and review)
extract-comparison-data = "fls_tools.standards.analysis.extract:main"
prepare-outlier-analysis = "fls_tools.standards.analysis.prepare:main"
record-outlier-analysis = "fls_tools.standards.analysis.record:main"
record-investigation = "fls_tools.standards.analysis.record_investigation:main"
list-pending-outliers = "fls_tools.standards.analysis.pending:main"
diff-fls-matches = "fls_tools.standards.analysis.diff:main"
generate-analysis-reports = "fls_tools.standards.analysis.reports:main"
review-outliers = "fls_tools.standards.analysis.review:main"
reset-review = "fls_tools.standards.analysis.reset_review:main"
check-analysis-progress = "fls_tools.standards.analysis.analysis_progress:main"

# Analysis (legacy)
analyze-coverage = "fls_tools.analysis.coverage:main"
review-mappings = "fls_tools.analysis.review:main"

# Rust documentation infrastructure
clone-rust-docs = "fls_tools.rust_docs.clone:main"
extract-reference = "fls_tools.rust_docs.extract_reference:main"
extract-ucg = "fls_tools.rust_docs.extract_ucg:main"
extract-nomicon = "fls_tools.rust_docs.extract_nomicon:main"
extract-clippy-lints = "fls_tools.rust_docs.extract_clippy:main"
generate-rust-embeddings = "fls_tools.rust_docs.generate_embeddings:main"
search-rust-context = "fls_tools.rust_docs.search:main"

# Concept crosswalk enrichment
enrich-concept = "fls_tools.standards.crosswalk.enrich:main"
validate-concept-crosswalk = "fls_tools.standards.crosswalk.validate:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
